Workaround for Firefox border-collapse bug.

--- a/cryptic.css
+++ b/cryptic.css
@@ -1,6 +1,7 @@
 .puzzle-board {
   border: 1px solid black;
   border-collapse: collapse;
+  background-clip: padding-box; /* workaround for Firefox bug */
 }
 
 .puzzle-cell {
